--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,9 @@ jobs:
             npx nx run open-lens:build:app --win nsis msi portable
           elif [ "$RUNNER_OS" == "Linux" ]; then
             npx nx run open-lens:build:app --x64
+            rm -rf node_modules
+            npm run all:install
+            npx nx reset
             npx nx run open-lens:build:app --arm64
             find . -name '*pty.node' -print0 | xargs -0 file
           else
@@ -80,7 +83,6 @@ jobs:
           WIN_CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD_WIN }}
           CSC_FOR_PULL_REQUEST: true
           DOWNLOAD_ALL_ARCHITECTURES: ${{ runner.os != 'Windows' }}
-          DEBUG: 'electron-builder'
 
       - name: Calculate SHA256 checksum
         run: |-
