--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Build Lens
         run: |
           npm run all:install
+          # Avoid npm install from electron-builder
+          # ref: https://github.com/electron-userland/electron-builder/blob/80a3ae857b9305aff1774e1b2b932601af50231b/packages/app-builder-lib/src/util/yarn.ts#L11-L16
+          mkdir -p open-lens/node_modules
           
           if [ "${CSC_LINK}" = "" ] || [ "${CSC_KEY_PASSWORD}" = "" ]; then
             unset CSC_LINK
@@ -54,6 +57,13 @@ jobs:
             npx nx run open-lens:build:app --win nsis msi portable
           elif [ "$RUNNER_OS" == "Linux" ]; then
             npx nx run open-lens:build:app --x64 --arm64
+            rm -rf node_modules
+            npm run all:install -- --arch=arm64
+            find . -name '*pty.node' -print0 | xargs -0 file
+            env npm_config_target_arch=arm64 npm_config_arch=arm64 npm rebuild --verbose node-pty@0.10.1
+            find . -name '*pty.node' -print0 | xargs -0 file
+            npx nx reset
+            npx nx run open-lens:build:app 
             find . -name '*pty.node' -print0 | xargs -0 file
           else
             npx nx run open-lens:build:app --x64 --arm64
@@ -75,7 +85,7 @@ jobs:
           WIN_CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD_WIN }}
           CSC_FOR_PULL_REQUEST: true
           DOWNLOAD_ALL_ARCHITECTURES: ${{ runner.os != 'Windows' }}
-          DEBUG: electron-rebuild
+
       - name: Calculate SHA256 checksum
         run: |-
           if command -v shasum 2>/dev/null 1>&2; then
