--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,11 @@ jobs:
             find . -name '*pty.node' -print0 | xargs -0 file
             env npm_config_target_arch=arm64 npm_config_arch=arm64 npx @electron/rebuild -f -a amd64
             find . -name '*pty.node' -print0 | xargs -0 file
-            exit 0
+            cd open-lens
+            env npm_config_target_arch=arm64 npm_config_arch=arm64 npx @electron/rebuild -f -a amd64
+            cd ..
+            find . -name '*pty.node' -print0 | xargs -0 file
+            exit 1
             
           
             npx nx run open-lens:build:app --x64
