--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
           
             sudo apt update
             sudo apt install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu -y  
-            export CC=aarch64-linux-gnu-gcc CXX=aarch64-linux-gnu-g++ npm_config_target_arch=amd64 npm_config_arch=amd64
+            export CC=aarch64-linux-gnu-gcc CXX=aarch64-linux-gnu-g++ npm_config_target_arch=arm64 npm_config_arch=arm64
           
             npm run all:reinstall
             npx nx reset
