--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Build Lens
         run: |
-          
+          npm run all:install
           # Avoid npm install from electron-builder
           # ref: https://github.com/electron-userland/electron-builder/blob/80a3ae857b9305aff1774e1b2b932601af50231b/packages/app-builder-lib/src/util/yarn.ts#L11-L16
           mkdir -p open-lens/node_modules
@@ -57,7 +57,7 @@ jobs:
           elif [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt update
             sudo apt install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu -y          
-            env CC=aarch64-linux-gnu-gcc CXX=aarch64-linux-gnu-g++ npm_config_target_arch=arm64 npm_config_arch=arm64 npm run all:install
+            export CC=aarch64-linux-gnu-gcc CXX=aarch64-linux-gnu-g++
             npx nx run open-lens:build:app --arm64
             find . -name '*pty.node' -print0 | xargs -0 file
             exit 1
