Test electron-builder 24.5.1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,16 +55,22 @@ jobs:
           if [ "$RUNNER_OS" == "Windows" ]; then
             npx nx run open-lens:build:app --win nsis msi portable
           elif [ "$RUNNER_OS" == "Linux" ]; then
-            npx nx run open-lens:build:app          
-            npm run all:reinstall
-            npx nx reset
-          
             sudo apt update
-            sudo apt install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu -y          
-            export CC=aarch64-linux-gnu-gcc CXX=aarch64-linux-gnu-g++
-            mkdir -p open-lens/node_modules
+            sudo apt install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu -y
           
-            npx nx run open-lens:build:app --arm64
+            #npx nx run open-lens:build:app --arm64
+            #find . -name '*pty.node' -print0 | xargs -0 file
+          
+            #npx nx run open-lens:build:app          
+            #npm run all:reinstall
+            #npx nx reset
+          
+            #sudo apt update
+            #sudo apt install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu -y          
+            #export CC=aarch64-linux-gnu-gcc CXX=aarch64-linux-gnu-g++
+            #mkdir -p open-lens/node_modules
+          
+            npx nx run open-lens:build:app --x64 --arm64
             find . -name '*pty.node' -print0 | xargs -0 file
           else
             npx nx run open-lens:build:app --x64 --arm64
